@@ -291,6 +291,11 @@ def getCursorPos():
 	user32.GetCursorPos(ctypes.byref(point))
 	return [point.x,point.y]
 
+def getCaretPos():
+	point=ctypes.wintypes.POINT()
+	user32.GetCaretPos(ctypes.byref(point))
+	return [point.x,point.y]
+
 def getWindowText(hwnd):
 	buf=ctypes.create_unicode_buffer(1024)
 	user32.InternalGetWindowText(hwnd,buf,1024)
